# gossamer

./: Cargo.toml  README.md
src/: fitness_functions.rs  gif_processing.rs  image_processing.rs  main.rs
