[package]
name = "gossamer"
version = "0.1.0"
authors = ["simon <simon.hornby@kaleicode.co.za>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
dssim = "2.11"
chrono = "0.4"
load_image = { version = "2.12.1", features = ["static"] }
imgref = "1.6"
lodepng = "3.2.1"
imageproc = "0.21"
rand = "*"
engiffen = "0.8.1"
alphanumeric-sort = "1.4.0"
structopt = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1